cicd/prometheus/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.local.floriangubler.ch`)
      priority: 10
      services:
        - name: prometheus-operated
          port: 9090
  tls:
    secretName: prometheus-certificate
    domains:
      - main: prometheus.local.floriangubler.ch
